[gd_scene load_steps=30 format=2]

[ext_resource path="res://addons/gamelevels_blueprint/tres/font_bold.tres" type="FontFile" id=1]
[ext_resource path="res://addons/gamelevels_blueprint/icons/external-link-svgrepo-com.svg" type="Texture2D" id=2]
[ext_resource path="res://addons/gamelevels_blueprint/icons/copy-svgrepo-com.svg" type="Texture2D" id=3]
[ext_resource path="res://addons/gamelevels_blueprint/icons/edit-svgrepo-com.svg" type="Texture2D" id=4]
[ext_resource path="res://addons/gamelevels_blueprint/ui/room_panel.gd" type="Script" id=5]
[ext_resource path="res://addons/gamelevels_blueprint/icons/play-svgrepo-com.svg" type="Texture2D" id=6]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/upgrade.png" type="Texture2D" id=7]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/key.png" type="Texture2D" id=8]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/liberty-wing.png" type="Texture2D" id=9]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/jigsaw-piece.png" type="Texture2D" id=10]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/teleport.png" type="Texture2D" id=11]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/clapperboard.png" type="Texture2D" id=12]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/open-treasure-chest.png" type="Texture2D" id=13]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/easter-egg.png" type="Texture2D" id=14]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/battle-gear.png" type="Texture2D" id=15]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/farmer.png" type="Texture2D" id=16]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/mighty-force.png" type="Texture2D" id=17]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/minerals.png" type="Texture2D" id=18]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/secret-door.png" type="Texture2D" id=19]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/open-gate.png" type="Texture2D" id=20]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/boss-key.png" type="Texture2D" id=21]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/info.png" type="Texture2D" id=22]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/book-cover.png" type="Texture2D" id=23]
[ext_resource path="res://addons/gamelevels_blueprint/icons/metroidvania_icons/load.png" type="Texture2D" id=24]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.545098, 0.545098, 1 )
shadow_color = Color( 1, 0, 0, 0.6 )
shadow_size = 23

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 30.0
bg_color = Color( 0.0901961, 0.0392157, 0.298039, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 1, 1, 1, 1 )

[node name="RoomPanel" type="GraphNode" groups=["room_panel"]]
offset_right = 243.0
offset_bottom = 70.0
focus_mode = 2
mouse_default_cursor_shape = 13
theme_override_styles/frame = SubResource( 5 )
theme_override_styles/selected_frame = SubResource( 7 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 5.0
offset_right = 233.0
offset_bottom = 68.0
theme_override_constants/separation = -4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 223.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource( 1 )
text = "Room FileName"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 23.0
offset_right = 223.0
offset_bottom = 63.0
size_flags_horizontal = 4
theme_override_constants/separation = 21
alignment = 1

[node name="BtnGoTo" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource( 2 )
icon = ExtResource( 2 )
flat = true

[node name="BtnPlay" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 61.0
offset_right = 101.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
tooltip_text = "Play this scene"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource( 2 )
icon = ExtResource( 6 )
flat = true

[node name="BtnEdit" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 122.0
offset_right = 162.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
tooltip_text = "Edit this panel"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true

[node name="BtnCopyPath" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 183.0
offset_right = 223.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
tooltip_text = "Copy the scene path to clipboard"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource( 4 )
icon = ExtResource( 3 )
flat = true

[node name="Control" type="Control" parent="."]
show_behind_parent = true
offset_left = 10.0
offset_top = 69.0
offset_right = 233.0
offset_bottom = 69.0
mouse_filter = 2

[node name="TopPanelIcons" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
self_modulate = Color( 0.576471, 0.576471, 0.576471, 0.662745 )
offset_left = -10.0
offset_top = -117.0
offset_right = 26.0
offset_bottom = -48.0
mouse_filter = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource( 8 )

[node name="HBxTopIcons" type="HBoxContainer" parent="Control/TopPanelIcons"]
unique_name_in_owner = true
offset_left = 2.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 39.0
mouse_filter = 2
alignment = 1

[node name="info" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
offset_right = 32.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 22 )
expand = true
stretch_mode = 6

[node name="save" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
offset_left = 36.0
offset_right = 68.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 24 )
expand = true
stretch_mode = 6

[node name="skill" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
offset_left = 72.0
offset_right = 104.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="key" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
offset_left = 108.0
offset_right = 140.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="teleport" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 108.0
offset_right = 140.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="text" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 144.0
offset_right = 176.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 23 )
expand = true
stretch_mode = 6

[node name="boss" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 180.0
offset_right = 212.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="entrance" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 216.0
offset_right = 248.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="equipment" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 252.0
offset_right = 284.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="levelup" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 288.0
offset_right = 320.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="puzzle" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 324.0
offset_right = 356.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="upgrade" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 360.0
offset_right = 392.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="material" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 396.0
offset_right = 428.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="secret_area" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 432.0
offset_right = 464.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="treasure" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 468.0
offset_right = 500.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="cinematic" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 504.0
offset_right = 536.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="easter_egg" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 540.0
offset_right = 572.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="farm" type="TextureRect" parent="Control/TopPanelIcons/HBxTopIcons"]
visible = false
offset_left = 576.0
offset_right = 608.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnGoTo" to="." method="_on_BtnGoTo_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnEdit" to="." method="_on_BtnEdit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnCopyPath" to="." method="_on_BtnCopyPath_pressed"]
